# Canonada

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  version_bump.py
.github/workflows/: test_package.yml
src/canonada/: __init__.py  _config.py  _logger.py  _version.py  cli.py  logger.py
src/canonada/_utils/: progressbar.py
src/canonada/catalog/: __init__.py  _core.py  _datahandlers.py
src/canonada/exceptions/: __init__.py  _exceptions.py
src/canonada/pipeline/: __init__.py  _core.py
src/canonada/system/: __init__.py  _core.py
src/canonada/templates/: canonada.toml  gitignore
src/nodeflow/: __init__.py  _version.py  cli.py  logger.py
src/nodeflow/catalog/: __init__.py  _core.py  _datahandlers.py  core.py  datahandlers.py
src/nodeflow/pipeline/: __init__.py  _core.py  core.py
src/nodeflow/system/: _core.py
src/nodeflow/templates/: nodeflow.toml
src/nodeflow/templates/datahandlers/: __init__.py
tests/: test_catalog.py  test_datahandlers.py  test_project_catalog.py  test_project_creation.py  test_project_pipelines.py
tests/basic_test_project/: .gitignore  canonada.toml
tests/basic_test_project/config/: catalog.toml  credentials.toml  parameters.toml
tests/basic_test_project/datahandlers/: __init__.py
tests/basic_test_project/pipelines/: data_generation.py  offsets_pipeline.py
tests/basic_test_project/pipelines/nodes/: signal_generator.py
tests/basic_test_project/pipelines/nodes_data_gen/: signal_generator.py
tests/basic_test_project/pipelines/nodes_offset/: test_nodes.py
tests/basic_test_project/systems/: gen_offset_sys.py
tests/basic_test_project/tests/: test_project_execution.py  test_project_pipelines.py
