[project]
name = "canonada"
version = "0.0.1"
authors = [
  { name="Ricard Lado", email="ricard@lado.one" },
]
description = "Canonada is a data science framework that helps you build production-ready streaming pipelines for data processing in Python."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["data science", "streaming", "pipeline", "dataflow", "canonada"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]

[project.scripts]
canonada = "canonada.cli:main"

[project.urls]
Homepage = "https://github.com/RLado/Canonada"
Issues = "https://github.com/RLado/Canonada/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["canonada", "canonada.catalog", "canonada.pipeline", "canonada.system"]

[tool.setuptools.package-data]
"canonada" = ["templates/**"]