[project]
name = "canonada"
version = "0.3.5"
authors = [{ name = "Ricard Lado", email = "ricard@lado.one" }]
description = "Canonada is a data science framework that helps you build production-ready streaming pipelines for data processing in Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["data science", "streaming", "pipeline", "dataflow", "canonada"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "graphviz==0.20.3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "coverage>=7.0.0",
  "setuptools>=61.0",
  "twine>=6.1.0",
  "mypy>=1.15.0",
]

[project.scripts]
canonada = "canonada.cli:main"

[project.urls]
Homepage = "https://github.com/RLado/Canonada"
Issues = "https://github.com/RLado/Canonada/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
  "canonada",
  "canonada.catalog",
  "canonada.pipeline",
  "canonada.system",
  "canonada._utils",
]

[tool.setuptools.package-data]
"canonada" = ["templates/**"]
